# arena-sdk

./: .env.example  .gitignore  CHANGELOG.md  README.md  SUBMITTING.md  arena  e2e_pve.py  poker  pyproject.toml
arena_sdk/: __init__.py  __main__.py  comps.py  pack.py  submit.py
arena_sdk/poker/: contract.py  engine.py  live.py  read.py
devfun_poker_sdk/: __init__.py  __main__.py  comps.py  engine.py  gto.py  live.py  pack.py  submit.py
examples/: llm_strategy.py  strategy.py
examples/poker/: llm_strategy.py
examples/poker/skeletons/: always_fold.py
tests/: test_smoke.py
