[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-sdk"
version = "0.7.0"
description = "dev.fun Arena SDK — turn any bot into a Sandbox-submittable agent. Write one strategy.py, self-play offline, and submit to the Sandbox (PvE/PvP). First environment: poker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# pokerkit powers the SDK's local engine (NOT on the server — don't import it
# from a submitted strategy). numpy mirrors the sandbox runtime (stdlib + numpy +
# torch) so a numpy model bot self-plays locally exactly as it runs on the server.
dependencies = ["pokerkit", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]
model = ["torch"]   # the server preinstalls torch; install locally to test a torch bot

[project.scripts]
arena = "arena_sdk.__main__:main"

[tool.setuptools]
packages = ["arena_sdk", "arena_sdk.poker"]
